<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.jstollutions</groupId>
	<artifactId>sandbox</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>commons-csv</module>
		<module>data-jpa</module>
		<module>data-xml</module>
		<module>java-core-cookbook</module>
		<module>logging-log4j2</module>
		<module>logging-slf4j</module>
		<module>patterns</module>
		<module>test-mock</module>
		<module>hackatoo</module>
		<module>frijoles</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- ## Java version installed by install.sh ## -->
		<jdk.version>1.8.0u181</jdk.version>

		<!-- ## Spring Boot ## -->
		<spring-boot.version>2.0.3.RELEASE</spring-boot.version>
		<spring.version>5.0.7.RELEASE</spring.version> <!-- keep in sync with the version defined in spring-boot -->

		<jee.version>7.0</jee.version>
		<h2.version>1.3.176</h2.version>
		<hibernate.version>4.3.8.Final</hibernate.version>

		<!--KEEP ALPHABETICALLY SORTED -->
		<guava.version>19.0</guava.version>
		<jackson.version>2.5.3</jackson.version>
		<jackson.jsr310.version>2.6.0</jackson.jsr310.version>
		<javalee.version>3.0.7</javalee.version>
		<json.path.version>2.0.0</json.path.version>
		<hamcrest.version>2.0.0.0</hamcrest.version>
		<junit.version>4.12</junit.version>
		<mockito.version>1.10.19</mockito.version>
		<log4j.version>2.3</log4j.version>
		<slf4j.api.version>1.7.12</slf4j.api.version>
	</properties>


	<!-- #### Dependency Management ####
		 SORT THE DEPENDENCIES SIMILAR TO THE ORDER OF THEIR VERSION PROPERTIES!
		 USE ARTIFACT ID AS SECOND CRITERION IN CASE ONE PROPERTY IS USED FOR
		 SEVERAL DEPENDENCIES. -->
	<dependencyManagement>


		<dependencies>
			<!-- ## Spring Boot Dependencies ## -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--JAVA EE-->
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>${jee.version}</version>
				<scope>provided</scope>
			</dependency>
			<!--PERSISTENCE-->
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-entitymanager</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<!--MISC-->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<!--LOGGING-->
			<!--http://saltnlight5.blogspot.ch/2013/08/how-to-configure-slf4j-with-different.html-->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.api.version}</version>
			</dependency>
			<!--TESTING-->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-junit</artifactId>
				<scope>test</scope>
				<version>${hamcrest.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<build>
		<plugins>
			<plugin>
				<!--https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/-->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>


		<pluginManagement>
			<plugins>
			</plugins>
		</pluginManagement>

	</build>
</project>